--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 
 </head>
+
 <body class="bg-gray-100 py-10">
     <!-- Container -->
     <div class="max-w-4xl mx-auto bg-white p-8 rounded shadow-lg">
@@ -19,12 +21,14 @@
             <div class="flex space-x-4">
                 <div class="flex-1">
                     <label for="year" class="block text-sm font-medium text-gray-700">年 Year</label>
-                    <input type="number" value="2025" id="year" name="year" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
+                    <input type="number" value="2025" id="year" name="year"
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
                 </div>
 
                 <div class="flex-1">
                     <label for="level" class="block text-sm font-medium text-gray-700">年级 Level</label>
-                    <select id="level" name="level" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
+                    <select id="level" name="level"
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
                         <option value="p1">小一 Primary One</option>
                         <option value="p2">小二 Primary Two</option>
                         <option value="p3">小三 Primary Three</option>
@@ -41,7 +45,8 @@
 
                 <div class="flex-1">
                     <label for="subject" class="block text-sm font-medium text-gray-700">Subject</label>
-                    <select id="subject" name="subject" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
+                    <select id="subject" name="subject"
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
                         <option value="Cl">华文 Chinese</option>
                         <option value="Hcl" selected>高华 Higher Chinese</option>
                         <option value="Cl+Hcl">华文+高华 Chinese + Higher Chinese</option>
@@ -57,7 +62,8 @@
             <div class="flex space-x-4">
                 <div class="flex-1">
                     <label for="day" class="block text-sm font-medium text-gray-700">星期几 Day</label>
-                    <select id="day" name="day" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
+                    <select id="day" name="day"
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
                         <option value="mon">星期一 Monday</option>
                         <option value="tue">星期二 Tuesday</option>
                         <option value="wed">星期三 Wednesday</option>
@@ -71,38 +77,39 @@
 
                 <div class="flex-1">
                     <label for="teacher" class="block text-sm font-medium text-gray-700">教师名 Teacher Name</label>
-                    <input type="text" id="teacher" name="teacher" placeholder="Mdm Lu" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
+                    <input type="text" id="teacher" name="teacher" placeholder="Mdm Lu"
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
                 </div>
 
                 <div class="flex-1">
                     <label for="timeslot" class="block text-sm font-medium text-gray-700">时间段 Timeslot</label>
-                    <select id="timeslot" name="timeslot" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
-                        <option>8:00am-10:00am</option>
-                        <option>8:30am-10:30am</option>
-                        <option>9:00am-11:00am</option>
-                        <option>9:30am-11:30am</option>
-                        <option>10:00am-12:00pm</option>
-                        <option>10:30am-12:30pm</option>
-                        <option>11:00am-1:00pm</option>
-                        <option>11:30am-1:30pm</option>
-                        <option>12:00pm-2:00pm</option>
-                        <option>12:30pm-2:30pm</option>
-                        <option>1:00pm-3:00pm</option>
-                        <option>1:30pm-3:30pm</option>
+                    <select id="timeslot" name="timeslot"
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
                         <option>2:00pm-4:00pm</option>
+                        <option>2:15pm-4:15pm</option>
                         <option>2:30pm-4:30pm</option>
+                        <option>2:45pm-4:45pm</option>
                         <option>3:00pm-5:00pm</option>
+                        <option>3:15pm-5:15pm</option>
                         <option>3:30pm-5:30pm</option>
+                        <option>3:45pm-5:45pm</option>
                         <option>4:00pm-6:00pm</option>
+                        <option>4:15pm-6:15pm</option>
                         <option>4:30pm-6:30pm</option>
+                        <option>4:45pm-6:45pm</option>
                         <option>5:00pm-7:00pm</option>
+                        <option>5:15pm-7:15pm</option>
                         <option>5:30pm-7:30pm</option>
+                        <option>5:45pm-7:45pm</option>
                         <option>6:00pm-8:00pm</option>
+                        <option>6:15pm-8:15pm</option>
                         <option>6:30pm-8:30pm</option>
+                        <option>6:45pm-8:45pm</option>
                         <option>7:00pm-9:00pm</option>
+                        <option>7:15pm-9:15pm</option>
                         <option>7:30pm-9:30pm</option>
+                        <option>7:45pm-9:45pm</option>
                         <option>8:00pm-10:00pm</option>
-                        <option>8:30pm-10:30pm</option>
                         <!-- Add more timeslots as needed -->
                     </select>
                 </div>
@@ -111,8 +118,10 @@
             <!-- Payment Frequency, Student Type, Additional Note -->
             <div class="flex space-x-4">
                 <div class="flex-1">
-                    <label for="paymentFrequency" class="block text-sm font-medium text-gray-700">多久缴费一次 Payment Frequency</label>
-                    <select id="paymentFrequency" name="paymentFrequency" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
+                    <label for="paymentFrequency" class="block text-sm font-medium text-gray-700">多久缴费一次 Payment
+                        Frequency</label>
+                    <select id="paymentFrequency" name="paymentFrequency"
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
                         <option value="1">每月 Monthly</option>
                         <option value="3" selected>每三月 Quarterly (3 Months)</option>
                         <option value="6">每六月 Semi-Annually (6 Months)</option>
@@ -122,7 +131,8 @@
 
                 <div class="flex-1">
                     <label for="studentType" class="block text-sm font-medium text-gray-700">新/旧学生 Student Type</label>
-                    <select id="studentType" name="studentType" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
+                    <select id="studentType" name="studentType"
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
                         <option value="new">新生 New</option>
                         <option value="old">老生 Old</option>
                     </select>
@@ -130,7 +140,8 @@
 
                 <div class="flex-1">
                     <label for="classType" class="block text-sm font-medium text-gray-700">上课类型 Class Type</label>
-                    <select id="classType" name="classType" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
+                    <select id="classType" name="classType"
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
                         <option value="class">多人课堂 Class</option>
                         <option value="one-to-one">一对一 One-to-one</option>
                     </select>
@@ -139,10 +150,12 @@
 
             <div>
                 <label for="additionalNote" class="block text-sm font-medium text-gray-700">额外备注 Additional Note</label>
-                <textarea id="additionalNote" name="additionalNote" rows="2" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2"></textarea>
+                <textarea id="additionalNote" name="additionalNote" rows="2"
+                    class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2"></textarea>
             </div>
-            
-            <button type="button" id="generate" class="w-full bg-blue-500 text-white p-3 rounded mt-6">开始生成 Generate</button>
+
+            <button type="button" id="generate" class="w-full bg-blue-500 text-white p-3 rounded mt-6">开始生成
+                Generate</button>
         </form>
 
         <!-- Output Container -->
@@ -151,7 +164,8 @@
             <p id="teacherInfo" class="text-gray-700"></p>
             <div id="feeTable" class="overflow-auto mt-4"></div>
             <h4 id="newStudentNote" style="display:none; ">
-                New student note: Upon your initial payment, an additional one-time deposit of $200 (refundable) and a registration fee of $50 are required. This fee is not yet included in the table. <br>
+                New student note: Upon your initial payment, an additional one-time deposit of $200 (refundable) and a
+                registration fee of $50 are required. This fee is not yet included in the table. <br>
                 新生备注： 首次付费时，需要支付额外的一次性定金 $200 （可退）和注册费 $50。该费用并未包括在您的收费表中。
             </h4>
             <br>
@@ -159,11 +173,13 @@
         </div>
 
         <div>
-            <button id="downloadPdf" class="w-full bg-green-500 text-white p-3 rounded mt-6 hidden">下载PDF Download as PDF</button>
+            <button id="downloadPdf" class="w-full bg-green-500 text-white p-3 rounded mt-6 hidden">下载PDF Download as
+                PDF</button>
         </div>
     </div>
 
     <!-- Script for handling data and calculations -->
     <script type="module" src="/feeCalculation.js"></script>
 </body>
+
 </html>
