--- a/index.html
+++ b/index.html
@@ -85,6 +85,30 @@
                     <label for="timeslot" class="block text-sm font-medium text-gray-700">时间段 Timeslot</label>
                     <select id="timeslot" name="timeslot"
                         class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
+                        <option>8:00am-10:00am</option>
+                        <option>8:15am-10:15am</option>
+                        <option>8:30am-10:30am</option>
+                        <option>8:45am-10:45am</option>
+                        <option>9:00am-11:00am</option>
+                        <option>9:15am-11:15am</option>
+                        <option>9:30am-11:30am</option>
+                        <option>9:45am-11:45am</option>
+                        <option>10:00am-12:00pm</option>
+                        <option>10:15am-12:15pm</option>
+                        <option>10:30am-12:30pm</option>
+                        <option>10:45am-12:45pm</option>
+                        <option>11:00am-1:00pm</option>
+                        <option>11:15am-1:15pm</option>
+                        <option>11:30am-1:30pm</option>
+                        <option>11:45am-1:45pm</option>
+                        <option>12:00pm-2:00pm</option>
+                        <option>12:15pm-2:15pm</option>
+                        <option>12:30pm-2:30pm</option>
+                        <option>12:45pm-2:45pm</option>
+                        <option>1:00pm-3:00pm</option>
+                        <option>1:15pm-3:15pm</option>
+                        <option>1:30pm-3:30pm</option>
+                        <option>1:45pm-3:45pm</option>
                         <option>2:00pm-4:00pm</option>
                         <option>2:15pm-4:15pm</option>
                         <option>2:30pm-4:30pm</option>
