add download excel button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Tuition Fee Payment Generator</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
 </head>
 
@@ -197,8 +198,8 @@
         </div>
 
         <div>
-            <button id="downloadPdf" class="w-full bg-green-500 text-white p-3 rounded mt-6 hidden">下载PDF Download as
-                PDF</button>
+            <button id="downloadPdf" class="w-full bg-green-500 text-white p-3 rounded mt-6 hidden">下载PDF文件 | Download as PDF</button>
+            <button id="downloadExcel" class="w-full bg-green-500 text-white p-3 rounded mt-6 hidden">下载EXCEL文件 | Download as Excel</button>
         </div>
     </div>
 
