--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                         <option value="Cl">华文 Chinese</option>
                         <option value="Hcl" selected>高华 Higher Chinese</option>
                         <option value="Cl+Hcl">华文+高华 Chinese + Higher Chinese</option>
-                        <option value="EMath">数学 Mathematics</option>
-                        <option value="AMath">高数 Mathematics</option>
+                        <option value="EMath">数学 Elementary Mathematics</option>
+                        <option value="AMath">高数 Additional Mathematics</option>
                         <option value="Physics">物理 Physics</option>
                         <!-- Add more subjects as needed -->
                     </select>
