updated fee data

--- a/index.html
+++ b/index.html
@@ -156,11 +156,13 @@
                 </div>
 
                 <div class="flex-1">
-                    <label for="studentType" class="block text-sm font-medium text-gray-700">新/旧学生 Student Type</label>
+                    <label for="studentType" class="block text-sm font-medium text-gray-700">学生类型 Student Type</label>
                     <select id="studentType" name="studentType"
                         class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
                         <option value="new">新生 New</option>
                         <option value="old">老生 Old</option>
+                        <option value="co-new">合作（新）</option>
+                        <option value="co-old">合作（旧）</option>
                     </select>
                 </div>
 
